--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.8.3",
     "autoprefixer-stylus": "^1.0.0",
     "express": "^4.17.1",
+    "firebase": "^9.0.2",
     "node-sass": "4.14.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
@@ -15,6 +16,7 @@
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-transition-group": "^4.4.2",
     "stylus": "^0.55.0",
     "web-vitals": "^1.1.0"
   },
@@ -22,7 +24,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "styles": "stylus -u autoprefixer-stylus ./src/Components/Neo/Neo.styl -o ./src/Neo/Neo.css",
+    "styles:watch": "stylus -u autoprefixer-stylus -w ./src/Components/Neo/Neo.styl -o ./src/Neo/Neo.css"
   },
   "proxy": "http://localhost:5000/",
   "eslintConfig": {
